--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "airplayer": "^2.0.0",
     "buffer-from": "^1.0.0",
     "clivas": "^0.2.0",
+    "http-shutdown": "^1.2.2",
     "inquirer": "^5.0.1",
     "keypress": "^0.2.1",
     "mime": "^2.2.0",
